@@ -14,6 +14,7 @@ v8.0.33
 - WL#15435: Improve the logging system
 - WL#15401: Support for type hints in module mysqlx
 - BUG#30103652: Connector/Python ClientFlag SESION_TRACK is a misspelling
+- BUG#27489972: Several COM_% commands have been deprecated
 - BUG#27359063: Support for dictionary, named_tuple, and raw to prepared statements cursor
 
 v8.0.32
